build-6:
- graphics reworked
- added functionality for the first few buildings
- reworked transport code
- added multiselect option for editors 'set texture'tool

build-5:
- added Immovable Tool in editor
- added Map_Loader support
- added support for multifield-fieldsels (for editor and to select areas)
- added height tools in the editor
- added item ware code
- added ware transportation (carriers stay on roads and can carry wares)
- construction sites are implemented
- added support for more (and most importantly: compressed) graphics formats

build-4:
- added Warehouse options window
- added ware requests

build-3:
- added DirAnimations for convenience
- added Economy code
- added record/playback code
- added wares code
- added worker code
- use different background images for different menus

build-2:
- options handling redesigned
- introduced System
- added keyboard input
- build symbols react to objects now (can't build next to stones etc...)
- only use 8 different types of trees (like Settlers 2)
- unique windows now remember their position
- improved fieldaction mouse placement for fast click-through
- new structure for tribe data
- new terrain textures
- added "fps" key to animations
- renderer uses player colors
- added flags
- added road building
- split of moving and non-moving objects in hierarchy